--- a/cluster/minio/minio_route.yaml
+++ b/cluster/minio/minio_route.yaml
@@ -5,7 +5,7 @@ metadata:
   name: minio
   namespace: minio
 spec:
-  host: minio.sno.thuisnet.lan
+  host: minio.apps.sno.thuisnet.lan
   path: /
   port:
     targetPort: 9090
