--- a/cluster/minio/minio_pvc.yaml
+++ b/cluster/minio/minio_pvc.yaml
@@ -4,6 +4,7 @@ metadata:
   name: minio-volume-pvc
   namespace: minio
 spec:
+  storageClassName: lvms-vg1
   accessModes:
     - ReadWriteOnce
   volumeMode: Filesystem
