--- a/cluster/minio/minio_pvc.yaml
+++ b/cluster/minio/minio_pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: minio-volume-pvc
   namespace: minio
 spec:
-  storageClassName: lvms-vg1
+  storageClassName: lvms-local-lvm
   accessModes:
     - ReadWriteOnce
   volumeMode: Filesystem
