--- a/cluster/minio/subscription.yml
+++ b/cluster/minio/subscription.yml
@@ -2,7 +2,7 @@ apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
 metadata:
   name: minio
-  namespace: minio-operator
+  namespace: openshift-operators
 spec:
   channel: stable
   installPlanApproval: Automatic
