--- a/cluster/tekton/subscription.yaml
+++ b/cluster/tekton/subscription.yaml
@@ -4,9 +4,9 @@ metadata:
   name: openshift-pipelines-operator
   namespace: openshift-operators
 spec:
-  channel: stable-v1.11.1
+  channel: latest
   installPlanApproval: Automatic
-  name: openshift-pipelines-operator
+  name: openshift-pipelines-operator-rh
   source: redhat-operators
   sourceNamespace: openshift-marketplace
   startingCSV:  openshift-pipelines-operator-rh.v1.11.1
