Try adding annotation to htpass secret

--- a/cluster/auth/htpass-secret.yaml
+++ b/cluster/auth/htpass-secret.yaml
@@ -6,3 +6,5 @@ metadata:
   creationTimestamp: null
   name: htpass-secret
   namespace: openshift-config
+  annotations:
+    argocd.argoproj.io/compare-options: IgnoreExtraneous
