--- a/cluster/apps/cluster-configs-web-terminal.yaml
+++ b/cluster/apps/cluster-configs-web-terminal.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-configs
-  namespace: openshift-gitops-web-terminal
+  name: cluster-configs-webterminal
+  namespace: openshift-gitops
 spec:
   destination:
     namespace: default
