Forward for all edbusers

--- a/cluster/logging/clusterlogforwarder.yaml
+++ b/cluster/logging/clusterlogforwarder.yaml
@@ -19,6 +19,9 @@ spec:
           - edbuser10
           - edbuser11
           - edbuser12
+          - edbuser13
+          - edbuser14
+          - edbuser15
       name: edbuser-postgres-logs
   outputDefaults:
     elasticsearch:
