multiple separate apps for different use cases
small for mini workshops: just the database + backup
dba for dba workshops: above, but also tooling (grafana, kibana)
developer: as small, but with tekton

--- a/cluster/apps/dba/cluster-configs-apps.yaml
+++ b/cluster/apps/dba/cluster-configs-apps.yaml
@@ -11,6 +11,6 @@ spec:
   source:
     directory:
       recurse: false
-    path: cluster/apps
+    path: cluster/apps/dba
     repoURL: https://github.com/maxim-edb/cluster-config.git
     targetRevision: dev
