--- a/cluster/apps/developer/cluster-configs-apps.yaml
+++ b/cluster/apps/developer/cluster-configs-apps.yaml
@@ -11,6 +11,6 @@ spec:
   source:
     directory:
       recurse: false
-    path: cluster/apps
+    path: cluster/apps/developer
     repoURL: https://github.com/maxim-edb/cluster-config.git
     targetRevision: dev
