--- a/cluster/apps/cluster-configs-grafana.yaml
+++ b/cluster/apps/cluster-configs-grafana.yaml
@@ -1,12 +1,16 @@
-apiVersion: operators.coreos.com/v1alpha1
-kind: Subscription
+apiVersion: argoproj.io/v1alpha1
+kind: Application
 metadata:
-  name: grafana-operator
+  name: cluster-configs-grafana
   namespace: openshift-operators
 spec:
-  channel: v5
-  installPlanApproval: Automatic
-  name: grafana-operator
-  source: community-operators
-  sourceNamespace: openshift-marketplace
-  startingCSV: grafana-operator.v5.4.1
+  destination:
+    namespace: default
+    server: https://kubernetes.default.svc
+  project: default
+  source:
+    directory:
+      recurse: false
+    path: cluster/grafana
+    repoURL: https://github.com/maxim-edb/cluster-config.git
+    targetRevision: dev
