--- a/cluster/apps/cluster-configs-grafana.yaml
+++ b/cluster/apps/cluster-configs-grafana.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: cluster-configs-grafana
-  namespace: openshift-operators
+  namespace: openshift-gitops
 spec:
   destination:
     namespace: default
