For rosa clusters, use the rosa branch

--- a/cluster/apps/cluster-configs-tekton.yaml
+++ b/cluster/apps/cluster-configs-tekton.yaml
@@ -13,4 +13,4 @@ spec:
       recurse: true
     path: cluster/tekton
     repoURL: https://github.com/maxim-edb/cluster-config.git
-    targetRevision: dev
+    targetRevision: rosa
