--- a/cluster/apps/cluster-configs-grafana.yaml
+++ b/cluster/apps/cluster-configs-grafana.yaml
@@ -13,4 +13,4 @@ spec:
       recurse: false
     path: cluster/grafana
     repoURL: https://github.com/maxim-edb/cluster-config.git
-    targetRevision: dev
+    targetRevision: rosa
