--- a/cluster/apps/cluster-configs-web-terminal.yaml
+++ b/cluster/apps/cluster-configs-web-terminal.yaml
@@ -13,4 +13,4 @@ spec:
       recurse: true
     path: cluster/web-terminal
     repoURL: https://github.com/maxim-edb/cluster-config.git
-    targetRevision: dev
+    targetRevision: rosa
