--- a/cluster/minio/tenant.yaml
+++ b/cluster/minio/tenant.yaml
@@ -32,7 +32,7 @@ spec:
           resources:
             requests:
               storage: 1Gi
-          storageClassName: lvms-local-lvm
+          storageClassName: crc-csi-hostpath-provisioner
       securityContext: {}
       containerSecurityContext: {}
   requestAutoCert: false
