--- a/cluster/edb-postgres/subscription.yml
+++ b/cluster/edb-postgres/subscription.yml
@@ -5,6 +5,8 @@ metadata:
     operators.coreos.com/cloud-native-postgresql.openshift-operators: ""
   name: cloud-native-postgresql
   namespace: openshift-operators
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
 spec:
   channel: stable-v1.20
   installPlanApproval: Automatic
