--- a/cluster/logging/elastic-subscription.yaml
+++ b/cluster/logging/elastic-subscription.yaml
@@ -3,6 +3,8 @@ kind: Subscription
 metadata:
   name: elasticsearch-operator
   namespace: openshift-operators-redhat
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
 spec:
   channel: stable
   installPlanApproval: Automatic
