--- a/cluster/logging/logging-operator-subscription.yaml
+++ b/cluster/logging/logging-operator-subscription.yaml
@@ -6,6 +6,8 @@ metadata:
     operators.coreos.com/cluster-logging.openshift-logging: ''
   name: cluster-logging
   namespace: openshift-logging
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
 spec:
   channel: stable
   installPlanApproval: Automatic
