--- a/cluster/web-terminal/subscription.yaml
+++ b/cluster/web-terminal/subscription.yaml
@@ -3,6 +3,8 @@ kind: Subscription
 metadata:
   name: web-terminal
   namespace: openshift-operators
+  annotations:
+    argocd.argoproj.io/sync-wave: "-1"
 spec:
   channel: fast
   installPlanApproval: Automatic
