Set sync policy to auto

--- a/cluster/apps/dba/cluster-configs-apps.yaml
+++ b/cluster/apps/dba/cluster-configs-apps.yaml
@@ -11,3 +11,5 @@ spec:
     path: cluster/apps/dba
     repoURL: https://github.com/maxim-edb/cluster-config.git
     targetRevision: rosa
+  syncPolicy:
+    automated: {}
