--- a/cluster/apps/cluster-configs-logging.yaml
+++ b/cluster/apps/cluster-configs-logging.yaml
@@ -14,3 +14,5 @@ spec:
     path: cluster/logging
     repoURL: https://github.com/maxim-edb/cluster-config.git
     targetRevision: rosa
+  syncPolicy:
+    automated: {}
