--- a/cluster/apps/cluster-configs-monitoring.yaml
+++ b/cluster/apps/cluster-configs-monitoring.yaml
@@ -14,3 +14,5 @@ spec:
     path: cluster/monitoring
     repoURL: https://github.com/maxim-edb/cluster-config.git
     targetRevision: rosa
+  syncPolicy:
+    automated: {}
