fix missing source parameter

--- a/cluster/apps/dba/cluster-configs-apps.yaml
+++ b/cluster/apps/dba/cluster-configs-apps.yaml
@@ -8,6 +8,7 @@ spec:
     namespace: default
     server: https://kubernetes.default.svc
   project: default
+  source:
     path: cluster/apps/dba
     repoURL: https://github.com/maxim-edb/cluster-config.git
     targetRevision: rosa
