--- a/cluster/minio/subscription.yml
+++ b/cluster/minio/subscription.yml
@@ -11,3 +11,4 @@ spec:
   name: minio-operator
   source: certified-operators
   sourceNamespace: openshift-marketplace
+  startingCSV: minio-operator.v5.0.9
