--- a/cluster/minio/tenant.yaml
+++ b/cluster/minio/tenant.yaml
@@ -34,7 +34,7 @@ spec:
           resources:
             requests:
               storage: 1Gi
-          storageClassName: gp3
+          storageClassName: lvms-local-lvm
       securityContext: {}
       containerSecurityContext: {}
   requestAutoCert: false
