--- a/prep/gitops/cluster-role-binding.yaml
+++ b/prep/gitops/cluster-role-binding.yaml
@@ -1,7 +1,7 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: cluster-role-binding
+  name: cluster-role-binding-cluster-admin
 subjects:
   - kind: ServiceAccount
     name: openshift-gitops-argocd-application-controller
@@ -9,4 +9,4 @@ subjects:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: admin
+  name: cluster-admin
