--- a/cluster/apps/cluster-configs-apps.yaml
+++ b/cluster/apps/cluster-configs-apps.yaml
@@ -11,6 +11,6 @@ spec:
   source:
     path: cluster/apps
     repoURL: https://github.com/maxim-edb/cluster-config.git
-    targetRevision: rosa
+    targetRevision: aws
   syncPolicy:
     automated: {}
