--- a/cluster/apps/cluster-configs-monitoring.yaml
+++ b/cluster/apps/cluster-configs-monitoring.yaml
@@ -13,6 +13,6 @@ spec:
       recurse: true
     path: cluster/monitoring
     repoURL: https://github.com/maxim-edb/cluster-config.git
-    targetRevision: rosa
+    targetRevision: aws
   syncPolicy:
     automated: {}
