--- a/cluster/apps/small/cluster-configs-apps.yaml
+++ b/cluster/apps/small/cluster-configs-apps.yaml
@@ -11,6 +11,6 @@ spec:
   source:
     path: cluster/apps/small
     repoURL: https://github.com/maxim-edb/cluster-config.git
-    targetRevision: aws
+    targetRevision: dev
   syncPolicy:
     automated: {}
